--- a/.github/workflows/docker-publish-alpine.yml
+++ b/.github/workflows/docker-publish-alpine.yml
@@ -38,6 +38,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
+          file: Dockerfile-alpine  # 显式指定 Dockerfile-alpine
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.variant }}-alpine
