--- a/.github/workflows/docker-publish-alpine.yml
+++ b/.github/workflows/docker-publish-alpine.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -47,7 +47,7 @@ jobs:
             NETWORK_REGION=${{ matrix.network }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
 
       - name: Create Latest Tag
         if: matrix.network == 'global' || matrix.network == 'cn'
