--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        alpine_version: [3.17, 3.18, 3.19, 3.20]  # 支持更多 Alpine 版本
+        alpine_version: [3.17, 3.18, 3.19]  # 支持更多 Alpine 版本
         network: ["global", "cn"]
         os: ["alpine"]
     env:
