--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,8 @@ jobs:
           docker build --build-arg ALPINE_VERSION=$os_version -t $ns/mysql:$os -f Dockerfile-alpine .
         env:
           os_version: ${{ matrix.alpine_version }}
+          os: ${{ matrix.os }}
+          network: ${{ matrix.network }}
 
       - name: Test images
         run: |
@@ -69,6 +71,8 @@ jobs:
           docker run $ns/mysql:$os echo done
         env:
           os_version: ${{ matrix.alpine_version }}
+          os: ${{ matrix.os }}
+          network: ${{ matrix.network }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -94,3 +98,5 @@ jobs:
           docker push $ns/mysql:$os
         env:
           os_version: ${{ matrix.alpine_version }}
+          os: ${{ matrix.os }}
+          network: ${{ matrix.network }}
